--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -8,7 +8,18 @@
     <h1>hi</h1>
     <form th:action="@{/calculate}" method="post">
         <label for="num1">Number 1:</label>
-        <input type="number" step="any" id="num1" name="num1" />
+        <input type="number" step="any" id="num1" name="num1" required/>
+
+        <label for="num2">Number 2:</label>
+        <input type="number" step="any" id="num2" name="num2" required/>
+
+        <label for="operation">Operation:</label>
+        <select id="operation" name="operation">
+            <option>Add (+)</option>
+            <option>Subtract (-)</option>
+            <option>Multiply (*)</option>
+            <option>Divide (/)</option>
+        </select>
 
         <button type="submit">Calculate</button>
     </form>
